<resources>
    <string name="app_name">Android Showcase</string>
    <string name="app_name_dev">[DEV] Android Showcase</string>

    <!-- Activity Names -->
    <string name="title_activity_splash">SplashActivity</string>

    <string-array name="components">
        <item>Authentication</item>
        <item>OCR</item>
        <item>Authentication</item>
        <item>Authentication</item>
    </string-array>

    <string name="function_catalogue">Function Catalogue</string>

    <!-- Authentication -->
    <string name="title_login">Login</string>
    <string name="title_signup">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="label_login">Login</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_logout">Logout</string>
    <string name="label_login_google">Login with Google</string>
    <string name="label_login_facebook">Login with Facebook</string>
    <string name="link_to_signup_page">Do not have account? Sign up now.</string>
    <string name="link_to_login_page">Already have account? Log In now.</string>
    <string name="welcome_username">Welcome %s</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_confirm_password_empty">Please re-enter your password</string>
    <string name="error_confirm_password_not_match">Re-enter password not match</string>

    <!-- Profile -->
    <string name="title_profile">Profile</string>

    <!-- OCR Library -->
    <string name="cannot_parse_information">Cannot parse information, try again</string>
    <string name="title_singapore_nric">Singapore NRIC</string>
    <string name="title_work_permit">Work Permit</string>
    <string name="title_passport">Passport</string>
    <string name="title_driving_license">Driving License</string>
    <string name="title_student_concession_card">MOE-issued Student Concession Card</string>
    <string name="title_long_term_pass">Long-term Pass</string>
    <string name="title_saf_11b">SAF 11B</string>
    <string name="title_birth_certificate">Birth Certificate</string>
    <string name="title_malaysia_ic">Malaysian IC</string>
    <string name="hint_id_number">ID NO.</string>
    <string name="hint_license_number">LICENSE NUMBER</string>
    <string name="hint_birth_cert_number">BIRTH CERTIFICATE NO.</string>
    <string name="hint_nationality">Nationality</string>
    <string name="hint_passport_number">PASSPORT NO.</string>
    <string name="hint_race">Race</string>
    <string name="hint_name">Name</string>
    <string name="hint_birth_country">Country of Birth</string>
    <string name="hint_birth_date">Day of Birth</string>
    <string name="hint_sex">Sex</string>
</resources>
