<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:orientation="vertical"
    android:paddingStart="@dimen/screen_padding"
    android:paddingEnd="@dimen/screen_padding"
    android:weightSum="2">

    <ImageView
        android:src="@drawable/your_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/AppTheme.EditText.EmailPassword"
        android:hint="@string/hint_email" />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/AppTheme.EditText.EmailPassword"
        android:hint="@string/hint_password" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button"
        android:text="@string/label_login"/>

    <ImageButton
        android:id="@+id/btnFingerprintLogin"
        style="@style/AppTheme.SocialButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_round_bg"
        android:backgroundTint="@android:color/holo_blue_light"
        app:tint="@android:color/white"
        android:src="@drawable/ic_fingerprint"/>

    <include layout="@layout/horizontal_line_text_middle_divider" />

    <include
        android:id="@+id/social_login"
        layout="@layout/include_social_login" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_to_signup_page"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>