<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include android:id="@+id/include_image"
                layout="@layout/include_image_view" />

            <Spinner
                android:id="@+id/sp_card_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_takePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Extract Data" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_info_bg"
                android:padding="@dimen/content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_id_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_birth_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_race"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_race">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_race"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_birth_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_birth_country">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_birth_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_sex" />

                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <RadioButton
                        android:id="@+id/rad_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/rad_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Female" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/pb_processing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>
</FrameLayout>